Добавлен carrierwave. Удалены serializers and gem active_model_serializer. refs #5

--- a/app/frontend/core/templates/companies.jade
+++ b/app/frontend/core/templates/companies.jade
@@ -24,7 +24,7 @@ div#page_content
                                 th City
                                 //- th Email
                                 th Country
-                                th Description
+                                th Phone
                                 //- th Priority
                                 //- th Created
                                 //- th Updated
@@ -38,7 +38,7 @@ div#page_content
                                 th City
                                 //- th Email
                                 th Country
-                                th Description
+                                th Phone
                                 //- th Priority
                                 //- th Created
                                 //- th Updated
@@ -52,7 +52,7 @@ div#page_content
                                 td(data-ng-bind="company.name")
                                 td(data-ng-bind="company.city")
                                 td(data-ng-bind="company.country")
-                                td.td-text-overflow(data-ng-bind="company.description" title="{{company.description}}")
+                                td.td-text-overflow(data-ng-bind="company.phone" title="{{company.phone}}")
                                 //- td
                                 //-     a(href="mailto:{{company.email}}" data-ng-bind="company.email")
                                 td.uk-text-center.td-nowrap
