--- a/app/frontend/core/templates/company_card.jade
+++ b/app/frontend/core/templates/company_card.jade
@@ -4,10 +4,10 @@ div#page_content
     div#page_content_inner
         div.uk-grid.uk-grid-medium
             div.uk-width-large-2-10.uk-row-first
-                div.md-card
+                div.md-card(data-ng-if="$companyCardCtrl.companyObject.logo.url")
                     div.md-card-content
                         div.uk-margin-bottom.uk-text-center
-                            img.img_medium(data-ng-src="http://leicarumors.com/wp-content/uploads/2016/02/Huawei-Logo.jpg" title="")
+                            img.img_medium(data-ng-src="$companyCardCtrl.companyObject.logo.url" title="{{$companyCardCtrl.companyObject.name}}")
                 div.md-card
                     div.md-card-content
                         div.uk-text-center
@@ -20,12 +20,12 @@ div#page_content
                         ul.md-list
                             li
                                 div.md-list-content
-                                    span.uk-text-small.uk-text-muted.uk-display-block Country
-                                    span.md-list-heading.uk-text-large(data-ng-bind="$companyCardCtrl.companyObject.country")
+                                    span.uk-text-small.uk-text-muted.uk-display-block Updated at
+                                    span.md-list-heading.uk-text-large(data-ng-bind="$companyCardCtrl.companyObject.updated_at")
                             li
                                 div.md-list-content
-                                    span.uk-text-small.uk-text-muted.uk-display-block City
-                                    span.md-list-heading.uk-text-large(data-ng-bind="$companyCardCtrl.companyObject.city")
+                                    span.uk-text-small.uk-text-muted.uk-display-block Created at
+                                    span.md-list-heading.uk-text-large(data-ng-bind="$companyCardCtrl.companyObject.created_at")
                             //- li
                                 div.md-list-content
                                     span.uk-text-small.uk-text-muted.uk-display-block Owner
