--- a/app/frontend/core/templates/company_card_details.jade
+++ b/app/frontend/core/templates/company_card_details.jade
@@ -12,16 +12,16 @@ div.md-card
                 hr.uk-grid-divider
                 div.uk-grid.uk-grid-small
                     div.uk-width-large-1-3
+                        span.uk-text-muted.uk-text-small Short name
+                    div.uk-width-large-2-3
+                        span.uk-text-large.uk-text-middle(data-ng-bind="$companyCardCtrl.companyObject.short_name")
+                hr.uk-grid-divider
+                div.uk-grid.uk-grid-small
+                    div.uk-width-large-1-3
                         span.uk-text-muted.uk-text-small Owner
                     div.uk-width-large-2-3
                         span.uk-text-large.uk-text-middle
                             span(data-ng-bind="$companyCardCtrl.companyObject.owner_name")
-                hr.uk-grid-divider
-                div.uk-grid.uk-grid-small
-                    div.uk-width-large-1-3
-                        span.uk-text-muted.uk-text-small Short name
-                    div.uk-width-large-2-3
-                        span.uk-text-large.uk-text-middle(data-ng-bind="$companyCardCtrl.companyObject.short_name")
                 hr.uk-grid-divider
                 div.uk-grid.uk-grid-small
                     div.uk-width-large-1-3
@@ -45,7 +45,7 @@ div.md-card
                     div.uk-width-large-1-3
                         span.uk-text-muted.uk-text-small Site
                     div.uk-width-large-2-3
-                        a.uk-text-large.uk-text-middle(data-ng-bind="$companyCardCtrl.companyObject.site")
+                        a.uk-text-large.uk-text-middle(data-ng-href="{{$companyCardCtrl.companyObject.site}}" data-ng-bind="$companyCardCtrl.companyObject.site" target="_blank")
                 //- hr.uk-grid-divider
                 //- div.uk-grid.uk-grid-small
                 //-     div.uk-width-large-1-3
