Добавлен класс отступа в меню карты компаний. refs #5

--- a/app/frontend/core/templates/company_card.jade
+++ b/app/frontend/core/templates/company_card.jade
@@ -17,7 +17,7 @@ div#page_content
                     //- div.md-card-toolbar
                     //-     h3.md-card-toolbar-heading-text Data
                     div.md-card-content
-                        ul.md-list
+                        ul.md-list.object-card
                             li
                                 div.md-list-content
                                     span.uk-text-small.uk-text-muted.uk-display-block Updated at
