Добавлен сервис, собирающий список меню для карты. refs #5

--- a/app/frontend/companies/templates/companies.jade
+++ b/app/frontend/companies/templates/companies.jade
@@ -8,8 +8,8 @@ div#page_content
                 input.md-input(type="text" data-ng-model="$companiesCtrl.search" md-input)
         h1(data-ng-bind="$companiesCtrl.listTitle")
         //- span.uk-text-upper.uk-text-small
-            //- | Customers
-            //- a(href="#"){{project_name}}
+            | Customers
+            a(href="#"){{project_name}}
     div#page_content_inner
         div.md-card
             div.md-card-content
