--- a/app/frontend/events/templates/events.jade
+++ b/app/frontend/events/templates/events.jade
@@ -59,7 +59,7 @@ div#page_content
                                 td(data-ng-bind="event.description")
                                 td.uk-text-right
                                     span.uk-badge.uk-badge-danger(data-ng-show="event.overdue") overdue
-//- div.md-fab-wrapper
-//-     a.md-fab.md-fab-accent(href="javascript:void(0)" data-ng-click="$eventsCtrl.add()")
-//-         i.material-icons &#xE145;
+div.md-fab-wrapper
+    a.md-fab.md-fab-accent(href="javascript:void(0)" data-ng-click="$eventsCtrl.add()")
+        i.material-icons &#xE145;
 //- c4279938@trbvn.com
