--- a/app/frontend/events/templates/events.jade
+++ b/app/frontend/events/templates/events.jade
@@ -14,27 +14,25 @@ div#page_content
                     table#ts_issues.uk-table.uk-table-align-vertical.tablesorter.tablesorter-altair.status-border-left
                         thead
                             tr
-                                //- th #
+                                th Title
                                 th Kind
                                 th Assigned at
                                 th Status
                                 th Assigned by
-                                th Description
+                                //- th Description
                                 th.uk-text-center &nbsp;
                         tfoot
                             tr
-                                //- th #
+                                th Title
                                 th Kind
                                 th Assigned at
                                 th Status
                                 th Assigned by
-                                th Description
-                                //- th Created by
+                                //- th Description
                                 th.uk-text-center &nbsp;
                         tbody
-                            tr(data-ng-repeat="event in $eventsCtrl.events.collection | filter: $eventsCtrl.search" data-ng-class-even="'even'")
-                                //- data-ng-class="{ 'danger even' : event.overdue }"
-                                //- td(data-ng-bind="event.id")
+                            tr(data-ng-repeat="event in $eventsCtrl.events.collection | filter: $eventsCtrl.search | orderBy: 'assigned_at'" data-ng-class-even="'even'")
+                                td(data-ng-bind="event.title")
                                 td
                                     nobr(data-ng-switch="event.kind")
                                         span(data-ng-switch-when="incoming_call") Incoming call
@@ -46,17 +44,12 @@ div#page_content
                                     span.uk-badge(data-ng-switch-when="pending") Pending
                                     span.uk-badge.uk-badge-success(data-ng-switch-when="done") Done
                                     span.uk-badge.uk-badge-danger(data-ng-switch-when="canceled") Canceled
-                                //- td
-                                //-     a
-                                //-         span(data-ng-bind="event.created_by.name")
-                                //-         | &nbsp;
-                                //-         span(data-ng-bind="event.created_by.lastname")
                                 td
                                     a
                                         span(data-ng-bind="event.assigned_by.name")
                                         | &nbsp;
                                         span(data-ng-bind="event.assigned_by.lastname")
-                                td(data-ng-bind="event.description")
+                                //- td(data-ng-bind="event.description")
                                 td.uk-text-right
                                     span.uk-badge.uk-badge-danger(data-ng-show="event.overdue") overdue
 div.md-fab-wrapper
