--- a/app/frontend/app.scss
+++ b/app/frontend/app.scss
@@ -61,3 +61,7 @@ h5.datetime-header {
 .selectize-input-danger > .selectize-control > .selectize-input {
     border-color: #e53935;
 }
+
+uk-datepicker {
+    z-index: 10094 !important;
+}
